<?xml version="1.0" encoding="utf-8"?>
<TableLayout
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:stretchColumns="1"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<TableRow android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">
		
		<TextView 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			 android:text="@string/text_cpu_type" >
		</TextView>	
		<TextView android:layout_width="fill_parent" android:id="@+id/text_cpu_type"
			android:layout_height="wrap_content" />				
		
	</TableRow>
	<TableRow android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">
		<TextView 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			 android:text="@string/text_os"  >
		</TextView>				
		<TextView android:layout_width="fill_parent" android:id="@+id/text_os"
			android:layout_height="wrap_content"  />	
	</TableRow>	
	<TableRow android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">	
		<TextView 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			 android:text="@string/text_model"  >
		</TextView>				
		<TextView android:layout_width="fill_parent" android:id="@+id/text_Model"
			android:layout_height="wrap_content"  />
	</TableRow>	

	<TableRow android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">	
		<TextView 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			 android:text="@string/text_build"  >
		</TextView>				
		<TextView android:layout_width="fill_parent" android:id="@+id/text_build"
			android:layout_height="wrap_content"  />
	</TableRow>	

	<TableRow android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">	
		<TextView 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			 android:text="@string/text_kernel"  >
		</TextView>				
		<TextView android:layout_width="fill_parent" android:id="@+id/text_kernel"
			android:layout_height="wrap_content"  />	
	</TableRow>	

	<TableRow android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">	
		<TextView 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			 android:text="@string/text_cpu_usage"  >
		</TextView>				
		<TextView android:layout_width="fill_parent" android:id="@+id/text_cpu_usage"
			android:layout_height="wrap_content"  />	
	</TableRow>	

	<TableRow android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">	
		<TextView 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			 android:text="@string/text_memory_usage"  >
		</TextView>				
		<TextView android:layout_width="fill_parent" android:id="@+id/text_memory_usage"
			android:layout_height="wrap_content"  />
	</TableRow>	

</TableLayout>
