<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content">

	<TableLayout android:id="@+id/widget28"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:orientation="vertical" >

		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="horizontal"
			android:gravity="center_vertical">
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="@string/text_camera_record_aging"
				android:textSize="25px" />

			<ToggleButton android:layout_height="wrap_content"
				android:layout_width="120px" android:text="@string/text_toggle_button"
				android:id="@+id/camera_record_button"></ToggleButton>

			<ProgressBar android:layout_width="wrap_content"
				android:visibility="invisible" android:layout_height="wrap_content"
				android:id="@+id/camera_progress_bar"></ProgressBar>

		</TableRow>

		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="horizontal"
			android:gravity="center_vertical">

			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="@string/text_camera_record_id"
				android:textSize="25px" />

			<Spinner android:id="@+id/camera_id_spinnner"
				android:layout_width="wrap_content" android:layout_height="wrap_content">
			</Spinner>


		</TableRow>



	</TableLayout>
	<SurfaceView android:id="@+id/camera_preview"
		android:layout_width="1px" android:layout_height="1px" />
</LinearLayout>